@@ -62,7 +62,6 @@ our %DEFAULTS = (
     rpc_transport          => undef,
     storage_transport      => undef,
     transport              => 'redis',
-    service_name           => '',
     metrics_adapter        => 'Statsd',
     metrics_host           => 'localhost',
     metrics_port           => '8125',
